--- a/Learn-React/Styling-Project/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/Learn-React/Styling-Project/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,16 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.invalid input {
+  border-color: red;
+  background: #e4a9b9;
+}
+
+.form-control.invalid label {
+  color: red;
+}
+
+
+
+
