--- a/Learn-React/first-project/src/Components/UserItem.module.css
+++ b/Learn-React/first-project/src/Components/UserItem.module.css
@@ -1,7 +1,7 @@
 .name{
     text-align: left;
     font-weight: bold;
-    color: rgba(97, 0, 145, 0.692);
+    color: rgb(164, 0, 219);
 }
 
 .age{
@@ -9,5 +9,5 @@
     margin-right: 2rem;
     text-align: right;
     font-weight: bold;
-    color: rgba(97, 0, 145, 0.692);
+    color: rgb(164, 0, 219);
 }
