--- a/Learn-React/first-project/src/Components/Modal.module.css
+++ b/Learn-React/first-project/src/Components/Modal.module.css
@@ -1,75 +1,97 @@
-.overlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(203, 83, 251, 0.1);
-    backdrop-filter: blur(15px);
-    pointer-events: auto;
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(203, 83, 251, 0.1);
+  backdrop-filter: blur(15px);
+  will-change: transform, opacity;
+  animation-name: blurBackground;
+  animation-duration: 0.25s;
 }
 
-.modalContainer{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border-radius: 1rem;
-    max-width: 800px;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.32);
-    min-width: 500px;
+@keyframes blurBackground {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1rem;
-    padding: 0.1rem;
-    padding-left: 1rem;
-    background-color: rgb(99, 0, 132);
-    border-bottom: 3px solid rgb(255, 0, 251);
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-
+.modalContainer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 1rem;
+  max-width: 800px;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.32);
+  min-width: 500px;
+  animation-name: modalPop;
+  animation-duration: 0.25s;
 }
 
-.header h2{
-    color: rgb(255, 255, 255);
-    text-shadow: 0 0 1rem rgba(255, 0, 251, 0.52);
+@keyframes modalPop {
+    from {
+      scale: 0;
+    }
+    to {
+      scale: 1;
+    }
 }
 
-.content{
-    padding: 1rem;
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding: 0.1rem;
+  padding-left: 1rem;
+  background-color: rgb(99, 0, 132);
+  border-bottom: 3px solid rgb(255, 0, 251);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
-.footer{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-top: 1rem;
-    padding: 1rem;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+.header h2 {
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 1rem rgba(255, 0, 251, 0.52);
 }
 
-.footer button{
-    border-radius: 0.3rem;
-    font-size: medium;
-    background-color: rgb(99, 0, 132);
-    box-shadow: 0 0 1rem rgba(255, 255, 255, 0.32);
-    color: rgb(255, 255, 255); 
-    padding: 0.5rem;
-    min-width: 100px;
+.content {
+  padding: 1rem;
 }
 
-.footer button:hover{
-    background-color: rgb(255, 0, 251);
-    color: rgb(255, 255, 255);
+.footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 1rem;
+  padding: 1rem;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
 
-.footer button:active{
-    background-color: rgb(255, 255, 255);
-    color: rgb(243, 9, 9);
+.footer button {
+  border-radius: 0.3rem;
+  font-size: medium;
+  background-color: rgb(99, 0, 132);
+  box-shadow: 0 0 1rem rgba(255, 255, 255, 0.32);
+  color: rgb(255, 255, 255);
+  padding: 0.5rem;
+  min-width: 100px;
+}
+
+.footer button:hover {
+  background-color: rgb(255, 0, 251);
+  color: rgb(255, 255, 255);
+}
+
+.footer button:active {
+  background-color: rgb(255, 255, 255);
+  color: rgb(243, 9, 9);
 }
