--- a/Learn-React/beep-bop/src/App.css
+++ b/Learn-React/beep-bop/src/App.css
@@ -4,3 +4,15 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+#main-element {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
