--- a/Learn-React/qr-coder/src/components/DisplayQR.css
+++ b/Learn-React/qr-coder/src/components/DisplayQR.css
@@ -17,7 +17,8 @@
     text-align: center;
     width: 250px;
     height: 250px;
-    box-shadow: 0 0px 2px rgba(0, 0, 0, 0.35); 
+    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.35); 
+    border-radius: 22px;
 }
 
 .download button{
